2006-07-25 Eric B. Weddington <eweddington@cso.atmel.com>

	* include/avr/power.h: New file. Provides a Power Management API.
	* include/avr/sleep.h: Fix grammar error in doxygen comment.
	* NEWS: New Power Management API.

2006-07-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox (faq_spman): New entry about the SP manipulation
	in function prologues/epilogues.

2006-07-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Guohui Wang <info@Atmanecl.net>:
	* include/avr/wdt.h: Fix spelling error for ATmega324P.
	Closes bug #17068.

2006-06-24 Anatoly Sokolov <aesok@post.ru>

	* include/avr/interrupt.h (EMPTY_INTERRUPT): Add 'signal' attribute
	to function prototype.
	Closes savannah bug #16434.

2006-06-24 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iousbxx6_7.h (PRST1, SOFEN): Define.

2006-06-11 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Bourgeois <david.bourgeois@c2me.be>:
	* doc/api/faq.dox (faq_rom_array): Fix a typo.

2006-05-23 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotnx5.h (LSM): Remove comment.

2006-05-23 Anatoly Sokolov <aesok@post.ru>

	* include/avr/eeprom.h: Turn #if on __AVR_HAVE_MOVW__ macro 
	into #if defined(). This makes it -Wundef safe.

2006-05-17 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sfr_defs.h: Ensure _SFR_ASM_COMPAT is defined before
	it is used.  This makes it -Wundef safe.

2006-05-03 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iocanxx.h (CANSIT): Add.

2006-04-29 Anatoly Sokolov <aesok@post.ru>

	* include/avr/sfr_defs.h (_MMIO_DWORD, _SFR_MEM32, _SFR_DWORD): Add.
	* include/avr/iocanxx.h (CANIDT, CANIDM): Add.

2006-04-26 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/eeprom.h: Use __asm__ in place of asm.
	Closes bug #16441: eeprom.h should use __asm__.

2006-04-22 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the ATmega165P/169P support.
	* devtools/gen-avr-lib-tree.sh: Add support for ATmega165P/169P.
	* include/avr/io.h: (Ditto.).