@@ -9,6 +9,7 @@
   [no-id]  Typo in iomxx0_1.h: PRUSART3.
   [no-id]  Make include/avr/sfr_defs.h -Wundef safe.
   [no-id]  Make include/avr/eeprom.h -Wundef safe.
+  [no-id]  Fix the timing of the HD44780 driver in the stdiodemo.
   [#15161] util/delay.h misses inline keyword (regression)
   [#15193] incorrect definition of IVSEL bit in MCUCR register
   [#15266] Function ldexp incorrectly processes overflow and underflow cases.
